--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.23.4",
+    "bootstrap": "^5.2.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-multiple-image-grid": "^1.0.3",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "reactjs-percentage-circle": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
