--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.1",
     "reactjs-percentage-circle": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
