--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-id-swiper": "2.4.0",
-    "swiper": "5.3.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
@@ -14,8 +12,10 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.23.4",
     "bootstrap": "^5.2.2",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
+    "react-animated-slider": "^2.0.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-multiple-image-grid": "^1.0.3",
@@ -25,7 +25,6 @@
     "react-share": "^4.4.1",
     "reactjs-percentage-circle": "^1.0.0",
     "web-vitals": "^2.1.4"
-   
   },
   "scripts": {
     "start": "react-scripts start",
